# outfox

./: .gitignore  Cargo.toml  README.md  process_mod_files.sh  rustfmt.toml  sync_openai.py  sync_types_to_spec.py  typos.toml
crates/doubao/: Cargo.toml
crates/doubao/src/: asr.rs  chat.rs  client.rs  config.rs  embeddings.rs  error.rs  images.rs  lib.rs  spec.rs  tokenization.rs  tts.rs
crates/doubao/src/asr/: recognition.rs  streaming.rs
crates/doubao/src/spec/: asr.rs  chat.rs  embeddings.rs  images.rs  tokenization.rs  tts.rs
crates/doubao/src/spec/asr/: protocol.rs
crates/doubao/src/spec/tts/: protocol.rs
crates/doubao/src/tts/: speech.rs  speech_http_v3.rs  speech_ws_v3_uni.rs
crates/novel/: Cargo.toml
crates/novel-cli/: Cargo.toml
crates/novel-cli/src/: main.rs
crates/novel/src/: lib.rs
crates/openai/: Cargo.toml
crates/openai-macros/: Cargo.toml
crates/openai-macros/src/: lib.rs
crates/openai/src/: assistants.rs  audio.rs  audit_logs.rs  batches.rs  chat.rs  chatkit.rs  client.rs  completion.rs  config.rs  download.rs  embedding.rs  error.rs  file.rs  fine_tuning.rs  image.rs  impls.rs  invites.rs  lib.rs  messages.rs  model.rs  moderation.rs  modrewrite.py  project_api_keys.rs  project_service_accounts.rs  project_users.rs  projects.rs  realtime.rs  request_options.rs  responses.rs  runs.rs  spec.rs  steps.rs  sync.py  threads.rs  traits.rs  uploads.rs  users.rs  util.rs  vector_store_file_batches.rs  vector_store_files.rs  (+3 more)
crates/openai/src/admin/: admin_.rs  admin_api_keys.rs  audit_logs.rs  certificates.rs  group_roles.rs  group_users.rs  groups.rs  invites.rs  project_api_keys.rs  project_certificates.rs  project_group_roles.rs  project_groups.rs  project_rate_limits.rs  project_roles.rs  project_service_accounts.rs  project_user_roles.rs  project_users.rs  projects.rs  roles.rs  usage.rs  user_roles.rs  users.rs
crates/openai/src/assistants/: assistants_.rs  messages.rs  runs.rs  steps.rs  threads.rs
crates/openai/src/audio/: audio_.rs  speech.rs  transcriptions.rs  translations.rs  voice_consents.rs  voices.rs
crates/openai/src/containers/: container_files.rs  containers_.rs
crates/openai/src/evals/: eval_run_output_items.rs  eval_runs.rs  evals_.rs
crates/openai/src/responses/: conversation_items.rs  conversations.rs
crates/openai/src/spec/: assistant.rs  assistant_stream.rs  assistants.rs  audio.rs  audit_log.rs  batch.rs  batches.rs  chat.rs  common.rs  completion.rs  embedding.rs  file.rs  fine_tuning.rs  graders.rs  image.rs  images.rs  impls.rs  invites.rs  message.rs  moderation.rs  project_api_key.rs  project_users.rs  projects.rs  realtime.rs  responses.rs  run.rs  step.rs  text.rs  thread.rs  upload.rs  users.rs  vector_store.rs  vectorstores.rs  videos.rs
crates/openai/src/spec/admin/api_keys/: api.rs  api_keys_.rs
crates/openai/src/spec/admin/audit_logs/: api.rs  audit_logs_.rs
crates/openai/src/spec/admin/certificates/: api.rs  certificates_.rs
crates/openai/src/spec/admin/groups/: api.rs  groups_.rs
crates/openai/src/spec/admin/invites/: api.rs  invites_.rs
crates/openai/src/spec/admin/project_api_keys/: api.rs  project_api_keys_.rs
crates/openai/src/spec/admin/project_rate_limits/: api.rs  project_rate_limits_.rs
crates/openai/src/spec/admin/project_service_accounts/: api.rs  project_service_accounts_.rs
crates/openai/src/spec/admin/project_users/: api.rs  project_users_.rs
crates/openai/src/spec/assistants/: api.rs  assistant.rs  impls.rs  message.rs  run.rs  step.rs  stream.rs  thread.rs
crates/openai/src/spec/audio/: audio_.rs  form.rs  impls.rs  sdk.rs  stream.rs
crates/openai/src/spec/batches/: api.rs  batch.rs
crates/openai/src/spec/chat/: api.rs  impls.rs
crates/openai/src/spec/chatkit/: api.rs  session.rs  thread.rs
crates/openai/src/spec/completions/: completion.rs
crates/openai/src/spec/containers/: api.rs  container.rs  form.rs
crates/openai/src/spec/embeddings/: embedding.rs  impls.rs
crates/openai/src/spec/evals/: api.rs  eval.rs
crates/openai/src/spec/files/: api.rs  file.rs  form.rs  impls.rs
crates/openai/src/spec/finetuning/: api.rs  fine_tuning.rs
crates/openai/src/spec/graders/: grader.rs
crates/openai/src/spec/images/: form.rs  image.rs  impls.rs  sdk.rs  stream.rs
crates/openai/src/spec/mcp/: impls.rs
crates/openai/src/spec/moderations/: moderation.rs
crates/openai/src/spec/realtime/: api.rs  client_event.new2.rs  client_event.rs  conversation_item.rs  error.new2.rs  error.rs  form.rs  item.rs  response.rs  server_event.new2.rs  server_event.rs  session.rs  session_resource.rs
crates/openai/src/spec/responses/: api.rs  conversation.rs  impls.rs  response.rs  sdk.rs  stream.rs
crates/openai/src/spec/shared/: filter.rs  function_call.rs  function_object.rs  image_input.rs  image_url.rs  response_format.rs  static_chunking_strategy.rs  transcription_usage.rs
crates/openai/src/spec/uploads/: form.rs  upload.rs
crates/openai/src/spec/vectorstores/: api.rs  vector_store.rs
crates/openai/src/spec/videos/: api.rs  form.rs  impls.rs  video.rs
crates/openai/src/vectorstores/: vector_store_file_batches.rs  vector_store_files.rs  vector_stores.rs
crates/openai/tests/: boxed_future.rs  bring-your-own-type.rs  completion.rs  embeddings.rs  ser_de.rs  whisper.rs
crates/outfox/: Cargo.toml
crates/outfox-cli/: Cargo.toml
crates/outfox-cli/src/: main.rs
crates/outfox/src/: lib.rs
crates/zhipu/: Cargo.toml
crates/zhipu/src/: agents.rs  asr.rs  assistant.rs  async_task.rs  batch.rs  chat.rs  client.rs  config.rs  embeddings.rs  error.rs  files.rs  images.rs  lib.rs  ocr.rs  reranking.rs  spec.rs  tokenizer.rs  tools.rs  tts.rs  videos.rs  voice.rs
crates/zhipu/src/spec/: agents.rs  asr.rs  assistant.rs  async_task.rs  batch.rs  chat.rs  embeddings.rs  files.rs  images.rs  ocr.rs  reranking.rs  tokenizer.rs  tools.rs  tts.rs  videos.rs  voice.rs
crates/zhipu/src/spec/tools/: file_parser.rs  moderation.rs  web_reader.rs  web_search.rs
crates/zhipu/src/tools/: file_parser.rs  moderation.rs  web_reader.rs  web_search.rs
(+8 files in other folders)
