[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.7.0"
authors = ["Chrislearn Young <chris@acroidea.com>"]
edition = "2024"
rust-version = "1.89"
description = """
Experimental AI API client library for Rust.
"""
homepage = "https://github.com/taidge/outfox"
repository = "https://github.com/taidge/outfox"
documentation = "https://docs.rs/outfox/"
readme = "./README.md"
categories = ["api-bindings", "web-programming", "asynchronous"]
keywords = ["openai", "async", "openapi", "ai"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
outfox = { version = "0.7.0", path = "crates/outfox", default-features = false }
outfox-openai = { version = "0.7.0", path = "crates/openai", default-features = false }
outfox-openai-macros = { version = "0.7.0", path = "crates/openai-macros", default-features = false }
outfox-doubao = { version = "0.7.0", path = "crates/doubao", default-features = false }
outfox-zhipu = { version = "0.7.0", path = "crates/zhipu", default-features = false }

aead = "0.5"
aes-gcm = "0.10"
anyhow = "1"
async-session = "3"
async-trait = "0.1"
assert-json-diff = "2"
backoff = { version = "0.4" }
base64 = "0.22"
bcrypt = "0.18"
bson = "3"
bytes = "1"
cookie = "0.18"
chacha20poly1305 = "0.10"
chrono = "0.4"
compact_str = { version = "0.9", features = ["serde"] }
derive_builder = "0.20.2"
encoding_rs = "0.8"
email_address = "0.2"
enumflags2 = "0.7"
etag = "4"
eventsource-stream = {version = "0.2", git="https://github.com/chrislearn/eventsource-stream.git", branch = "next"}
eyre = "0.6"
fastrand = "2"
form_urlencoded = "1"
futures = "0.3.31"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false }
h3-datagram = "0.0.2"
headers = "0.4"
http = "1"
http-body-util = "0.1"
hmac = {version = "0.12", default-features = false}
hex = {version = "0.4", default-features = false}
hostname-validator = "1"
hyper = { version = "1", features = ["full"] }
hyper-rustls = { version = "0.27", default-features = false }
hyper-util = { version = "0.1", default-features = true }
indexmap = "2"
inventory = "0.3"
jsonwebtoken = "10"
mime = "0.3"
mime-infer = "4"
moka = "0.12"
multer = "3"
multimap = "0.10"
native-tls = "0.2"
nix = { version = "0.30", default-features = false }
opentelemetry = { version = "0.30", default-features = false }
opentelemetry-http = { version = "0.30", default-features = false }
opentelemetry-semantic-conventions = { version = "0.30", default-features = false }
parking_lot = "0.12"
path-slash = "0.2"
percent-encoding = "2"
paste = "1"
pin-project = "1"
proc-macro-crate = { version = ">= 2, <= 4" }
proc-macro2-diagnostics = { version = "0.10", default-features = true }
proc-macro2 = "1"
quinn = { version = "0.11", default-features = false }
quote = "1"
rand = "0.9"
rcgen = "0.14"
regex = "1"
reqwest = { version = "0.13", default-features = false }
reqwest-eventsource = {version = "0.6", git="https://github.com/chrislearn/reqwest-eventsource", branch = "next"}
ring = "0.17"
rust_decimal = "1"
rustls = "0.23"
rustls-pemfile = "2"
rust-embed = { version = ">= 6, <= 9" }
secrecy = "0.10"
serde = "1"
serde_json = "1"
serde-xml-rs = "0.8"
serde_urlencoded = "0.7"
serde_norway = "0.9"
serde_with = "3"
sha2 = {version = "0.10", default-features = false }
smallvec = "1"
socket2 = "0.6"
syn = "2"
sync_wrapper = "1"
tempfile = "3.23"
thiserror = "2"
time = "0.3"
tokio = "1"
tokio-native-tls = "0.3"
tokio-rustls = { version = "0.26", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tokio-test = "0.4.4"
tokio-tungstenite = { version = "0.27", default-features = false }
tokio-util = "0.7"
tower = { version = "0.5", default-features = false }
tracing-subscriber = { version = "0.3" }
tracing = "0.1"
tracing-test = "0.2.1"
ulid = { version = "1", default-features = false }
url = "2"
uuid = "1"
x509-parser = "0.18"

# Compress
brotli = { version = "8", default-features = false }
flate2 = { version = "1", default-features = false }
zstd = { version = "0.13", default-features = false }

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
await_holding_lock = "warn"
dbg_macro = "warn"
empty_enums = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
exit = "warn"
filter_map_next = "warn"
fn_params_excessive_bools = "warn"
future_not_send = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_let_else = "warn"
mem_forget = "warn"
must_use_candidate = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
option_option = "warn"
redundant_clone = "warn"
ref_option = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_self_not_must_use = "warn"
single_match_else = "warn"
str_to_string = "warn"
suboptimal_flops = "warn"
todo = "warn"
trivially_copy_pass_by_ref = "warn"
type_complexity = "allow"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
unwrap_used = "warn"
use_self = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
