[package]
name = "outfox"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

# Provider features
openai = ["dep:outfox-openai"]
zhipu = ["dep:outfox-zhipu"]
doubao = ["dep:outfox-doubao"]

# Enable all providers
full = ["openai", "zhipu", "doubao"]

[dependencies]
outfox-openai = { workspace = true, optional = true }
outfox-zhipu = { workspace = true, optional = true }
outfox-doubao = { workspace = true, optional = true }

[lints]
workspace = true
